--- a/Staci@Wylie/makefile_calibrate
+++ b/Staci@Wylie/makefile_calibrate
@@ -39,33 +39,37 @@ endif
 LDFLAGS:   -L/usr/local/lib -L/usr/lib	
 CPPFLAGS:  -I/usr/local/include 
 LIBS = $(LAPACK) $(BLAS) $(XERBLA) $(LIB) $(LIB_WITH_CHOLMOD) $(LIB_WITH_PARTITION) $(CUBLAS_LIB) $(CUDART_LIB)
+
+GA_INC_DIRS = -I/home/cshos/GA
+GA_LIB_DIRS = -L/home/cshos/GA/ga
+
 #UMFPACK = /Users/hoscsaba/Utils/SuiteSparse/UMFPACK/Lib/libumfpack.a /Users/hoscsaba/Utils/SuiteSparse/AMD/Lib/libamd.a \
     /Users/hoscsaba/Utils/SuiteSparse/SuiteSparse_config/libsuitesparseconfig.a 
+
 
 #INC:-I/Users/hoscsaba/Utils/SuiteSparse/UMFPACK/Include -I/Users/hoscsaba/Utils/SuiteSparse/AMD/Include -I/Users/hoscsaba/Utils/SuiteSparse/SuiteSparse_config
 
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
+
+.SUFFIXES: .cpp
+.cpp.o:
+	$(CXX) $(CXXFLAGS) $(GA_INC_DIRS) -c $<
+
 all: staci_calibrate
 
 staci_calibrate: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++ -o "staci_calibrate" $(OBJS) $(USER_OBJS) $(LIBS)\
-        /usr/lib/x86_64-linux-gnu/libumfpack.a\	    
-	-L/usr/local/lib\
-	$(LDFLAGS)\
-	-lga -lm 
+	g++ -o staci_calibrate $(OBJS) $(USER_OBJS) $(LIBS) $(GA_LIB_DIRS) -lga -lm -lumfpack -lamd -lcblas -latlas
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) new_staci
+	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) staci_calibrate
 	-@echo ' '
 
 .PHONY: all clean dependents
 .SECONDARY:
-
--include ../makefile.targets
